--- a/localisation/POR_Portugal_l_english.yml
+++ b/localisation/POR_Portugal_l_english.yml
@@ -311,25 +311,25 @@ portu.4.t:0 "The Portuguse Commune requests entry into the Comintern"
 portu.4.d:0 "The Spartacist Revolution has now also suceeded in Portugal. The new Commune has arisen out of the fall of Salazars regime and demolished military resistance. The Portuguese Commune is now consolidating their power and is readying to maintain the spread of socialism in the entire Iberian Penisula. For this they require our support and are ensuring us, military support in any future campaigns for the Comintern"
 portu.4.a:0 "We welcome our Portuguese Brothers"
 
-portu.5.t:0 "The New Royal Army"
-portu.5.d:0 "It is 3PM in the afternoon and the radio channelis broadcasting a speech from the King, Manuel II, live.                                                                     Citizens of Portugal. I am not ignorant to my people and do believe that you have heard of the chaos within our armed forces. We have held back intel on these events for several weeks now so that we would be able to prevent counter setbacks and panic. But no longer shall I be silent, as it is my duty to tell my people what has been happening in the last days. When I was given the crown of Portugal back, I was not given it by you the people but by autocratic generals. Those Generals and officers hoped to continue their power abusing lifestyle through me as a figurehead. But I had not come back to my country as a puppet to enjoy fame and riches. This country has been living under military suppression for nearly  two decades now, hurting the future of this great nation. I came back to rule and bring back the old glory and for that to happen the ones who were responsible needed to face justice. A military purge throughout our armed forces has taken place, removing corrupt and opposing generals and officers. Soldiers, I have not taken away your ability to fight, I have given you a cause to serve. Citiziens of Portugal, the Restoration of the Kingdom is now complete. Long live Portugal."
-portu.5.a:0 "All glory to our King!"
+portu.5.t:0 "새로운 왕립 군대"
+portu.5.d:0 "오후 3시, 라디오 채널들은 마누엘 2세의 연설을 생방송으로 중계하고 있습니다.                                                                     포르투갈의 시민 여러분. 나는 내 백성에게 무지하지 않으며, 당신이 우리 군대 내부의 혼란에 대해 들어봤다고 믿습니다. 우리는 이러한 사건들에 대한 정보를 몇 주 동안 보류해 왔으며, 이에 대한 대응의 차질과 공황을 방지할 수 있었습니다. 그러나 나는 더 이상 침묵하지 않을 것입니다. 지난 며칠 동안 일어난 일을 사람들에게 말하는 것이 나의 의무이기 때문입니다. 제가 포르투갈의 왕관을 돌려받았을 때, 저는 당신들에게서 받은 것이 아니라 독재적인 장군들에게서 받은 것입니다. 그 장군들과 장교들은 저를 통해 권력을 남용하는 생활방식을 계속 유지하기를 바랐습니다. 그러나 나는 명성과 부를 누리기 위해 꼭두각시로 조국에 돌아오지 않았습니다. 이 나라는 거의 20년 동안 군사적인 탄압 아래 살아왔고, 이 위대한 국가의 미래를 해치고 있습니다. 저는 다시 통치하기 위해 돌아왔고, 오래된 영광을 되찾았습니다. 그리고 그런 일이 일어나기 위해 책임 있는 사람들은 정의에 맞설 필요가 있었습니다. 부패하고 반대되는 장군들과 장교들을 제거하는 군부 숙청이 우리 군 전역에서 일어났습니다. 장병들이여, 나는 그대들의 전투 능력을 빼앗은 것이 아니라 그대들에게 봉사할 명분을 준 것입니다. 포르투갈의 시민 여러분, 왕국의 복원은 이제 완료되었습니다. 포르투갈 만세."
+portu.5.a:0 "우리 국왕께 영광이 있기를 빈다!"
 
-portu.6.t:0 "New Concordat between Portugal and the Vatican signed"
-portu.6.d:0 "Roman Catholicism is a major part of this country identity. In the first Constitution of 1822 we officially declared the Catholicism our state religion. But in 1910 the Republican Revolution abolished several ties between the state and the church and also restricted the church in inhuman ways. Not only were Church properties seized and education secularized, but the Republic went so far as to ban the ringing of church bells, the wearing of clerical garb on the streets, and the holding of many popular religious festivals. While the Salazar government improved of these issues, it was never able to fully solidify the status of Roman Catholicism in Portugal. Our returned King, a strong believer in Roman Catholicism himself, has taken up the task personally to solve this problem. Now a new Concordat governing Church–State relations has been signed between Portugal and the Vatican. Roman Catholism has again now become the State Religion furthermore many of the anticlerical policies adopted during the First Republic were reversed. King Manuel the Second has gained praise and support from the puplic especially from conservatives and rural, areas for this act. The friendship betwenn Portugal and the Catholic Church has been restored in a comfortable and mutually reinforcing manner. May our Kingdom flourish from it."
-portu.6.a:0 "Amen, God with Portugal"
+portu.6.t:0 "포르투갈과 바티칸 사이의 새 협약이 체결되다"
+portu.6.d:0 "로마 가톨릭은 이 나라 정체성의 주요 부분입니다. 1822년 첫 헌법에서 우리는 공식적으로 가톨릭을 국교로 선포했습니다. 그러나 1910년 공화주의 혁명은 국가와 교회 사이의 몇몇 유대관계를 폐지했고 또한 비인간적인 방법으로 교회를 제한했습니다. 교회 재산은 압수되고 교육은 세속화되었을 뿐만 아니라, 공화국은 교회 타종, 길거리에서의 성직자의 의복 착용, 그리고 많은 인기 있는 종교 축제의 개최를 금지하기까지 했습니다. 살라자르 정부는 이러한 문제들을 개선했지만, 포르투갈에서 로마 가톨릭의 위상을 완전히 공고히 할 수는 없었습니다. 이 문제를 해결하기 위해 로마 가톨릭의 강력한 신자인 우리의 복권된 왕은 개인적으로 그 과제를 떠맡았습니다. 이제 교회와 국가 관계를 지배하는 새로운 협약이 포르투갈과 바티칸 사이에 체결되었습니다. 로마 카톨릭은 이제 다시 국교가 되었고, 게다가 제1공화국 동안 채택된 많은 반교회 정책들이 뒤집혔습니다. 마누엘 2세 왕은 특히 보수주의자들과 시골 지역들로부터 이러한 행동에 대한 찬사와 지지를 얻고 있습니다. 포르투갈과 카톨릭 교회는 수월하게 상호 보강된 방식으로 복원되었습니다. 우리 왕국이 그로 인해 번영하기를 바랍니다."
+portu.6.a:0 "아멘, 신께서 포르투갈과 함께하신다."
 
-portu.7.t:0 "Assasination attempt on the King!"
-portu.7.d:0 "On this day our King Manuel the Second nearly avoided his death. While driving with his royal escort through the streets of Lisbon, a man passed the security and was about to shot the royal car with an submachine gun. Luckily the royal guards were able to disarm the assasin before he was able to kill the king. This assasination attempt reminds us all of the Lisbon Regicide of 1908 when King Carlos and Luís Filipe were killed by Republican Revolutnaries. King Manuel had tried negotiating with Republican and Socialist Politicians about setting up a new parliamantary government, despite the Republicans overthrewing him in 1910. But our King now sees that there is no hope in negotiating a peaceful constitutional monarchy when democratic and socialists movements are still willing to use violent measures to achieve their goals. Many see the Revolution of 1910 being only successful because the Monarchy was not willing to impose its will upon the Republicans, it is now unlikely that a parliamantary goverment will be restored by the monarchy."
-portu.7.a:0 "Get rid of these godlees bastards!"
+portu.7.t:0 "국왕에 대한 암살 시도!"
+portu.7.d:0 "오늘, 우리의 마누엘 2세 국왕은 아슬아슬하게 죽음을 피했습니다. 왕실 호위를 받으며 리스본 거리를 차를 몰고 리스본 거리를 가던 중 한 남성이 경비대를 지나더니 곧이어 기관단총으로 왕실 차량을 쐈습니다. 다행히 왕실 근위대원들은 암살자가 왕을 죽이기 전에 그를 무장해제시킬 수 있었습니다. 이 암살 시도는 1908년 카를로스 왕과 루이스 필리페가 공화주의 반란군에 의해 살해당한 리스본 시역 사건을 우리에게 상기시킵니다. 마누엘 왕은 1910년 공화주의자들이 왕정을 전복시켰음에도 불구하고 공화당과 사회당 정치인들과 새로운 의원내각제 정부를 수립하기 위한 협상을 시도했습니다. 그러나 우리 국왕은 이제 민주주의자들과 사회주의자들의 운동 조직들이 여전히 그들의 목표를 달성하기 위해 폭력적인 수단을 사용하려는 의지가 있는 상황에서 평화적인 입헌군주제를 협상할 희망이 없다고 봅니다. 많은 사람들은 군주정의 의지를 공화당에 강요하려 하지 않았기 때문에 1910년 혁명이 성공했다고 봅니다. 이제 군주정에 의해 의원내각제 정부가 회복될 가능성은 거의 없습니다."
+portu.7.a:0 "이 무신론자 개자식들을 쓸어버려라!"
 
-portu.8.t:0 "Portugal wants to buy the Islands of the Lesser Sunda"
-portu.8.d:0 "Portugal has approached us with an deal. Portugal wants to aquire the islands of the Lesser Sunda for the trade of two direct implemeted industrial complexes (civilian factories) in Amsterdam. Should we agree to the deal?"
-portu.8.a:0 "A good price"
-portu.8.b:0 "The Dutch Empire will not shrink"
+portu.8.t:0 "포르투갈이 소순다 열도를 매입하길 원하다"
+portu.8.d:0 "포르투갈이 우리에게 거래를 제안했습니다. 포르투갈은 암스테르담에 있는 민간 공장 두 곳을 값으로 소순다 열도를 매입하고 싶어합니다. 우리가 그 거래에 동의해야 합니까?"
+portu.8.a:0 "좋은 값이다."
+portu.8.b:0 "네덜란드 제국은 줄어들지 않는다."
 
 portu.9.t:0 "네덜란드가 받아들이다"
-portu.9.d:0 "Our colony deal has been accepted! The whole of timor and all of the surrounding islands now belong to us."
+portu.9.d:0 "우리의 식민지 거래가 받아들여졌습니다! 티모르 전체와 주변 섬들은 이제 우리 소유입니다."
 portu.9.a:0 "훌륭해!"
 
 portu.10.t:0 "네덜란드가 거부하다"
@@ -409,12 +409,12 @@ portu.26.a:0 "훌륭해!"
 
 portu.27.t:0 "영국이 더 높은 지불금을 원하다"
 portu.27.d:0 ""
-portu.27.a:0 "The price is worth it for the results"
-portu.27.b:0 "That's too much."
+portu.27.a:0 "좋은 결과를 위해서라면 그 값은 충분하다."
+portu.27.b:0 "너무 비싸다."
 
 portu.28.t:0 "포르투갈이 우리 거래를 거부하다"
 portu.28.d:0 ""
-portu.28.a:0 "골칫거리군."
+portu.28.a:0 "망할."
 
 portu.29.t:0 "영국이 잠비아 거래를 거부하다"
 portu.29.d:0 ""
@@ -426,20 +426,20 @@ portu.30.a:0 "The colony is not needed for the war effort"
 portu.30.b:0 "The price is too low, bargain for more."
 portu.30.c:0 "The farmlands of Rhodesia are too important"
 
-portu.31.t:0 "The UK accepts the Rhodesia deal"
+portu.31.t:0 "영국이 로디지아 거래를 받아들이다"
 portu.31.d:0 ""
 portu.31.a:0 "훌륭해!"
 
-portu.32.t:0 "Englands wants a higher payment"
+portu.32.t:0 "영국이 더 높은 지불금을 원하다"
 portu.32.d:0 ""
-portu.32.a:0 "The price is worth it for the results"
-portu.32.b:0 "That's too much."
+portu.32.a:0 "좋은 결과를 위해서라면 그 값은 충분하다."
+portu.32.b:0 "너무 비싸다."
 
-portu.33.t:0 "Portugal denies our deal"
+portu.33.t:0 "포르투갈이 우리 거래를 거부하다"
 portu.33.d:0 ""
-portu.33.a:0 "Bugger"
+portu.33.a:0 "망할."
 
-portu.34.t:0 "The UK declines the Rhodesia deal"
+portu.34.t:0 "영국이 로디지아 거래를 거부하다"
 portu.34.d:0 ""
 portu.34.a:0 "제기랄."
 
@@ -450,13 +450,13 @@ portu.35.a:0 "포르투갈은 항상 동맹국으로 간주되어 왔다."
 portu.35.b:0 "우리는 포르투갈과의 협력에는 관심이 없다."
 
 portu.36.t:0 "영국이 동맹을 거부하다"
-portu.36.d:0 "The unthinkable has happened. The United Kingdom and Portugal maintained the longest alliance throughtout time in the world. And now it broken. The British rejected our alliance offer, saying that Portugal would only cause issues for them. The once great British pride is gone."
-portu.36.a:0 "We have to find other allies."
+portu.36.d:0 "상상할 수 없는 일이 일어났습니다. 영국과 포르투갈은 세계에서 가장 긴 동맹관계를 유지했습니다. 그리고 지금은 부서졌습니다. 영국은 포르투갈이 그들에게만 문제를 일으킬 것이라며 우리의 동맹 제의를 거절했습니다. 한때 위대했던 영국의 자부심은 사라졌습니다."
+portu.36.a:0 "우리는 다른 동맹을 찾아야 한다."
 
 portu.37.t:0 "포르투갈이 우리 동맹에 가입하길 원하다"
-portu.37.d:0 "The state of Portugal has requested to join our alliance and assist us in our wars. Portugal had a few months ago a national syndicalist revolution overthrowing the military government. While the government heavily support socialist reforms, they are still orginally inspired by our fascist princibles and are highly catholic."
-portu.37.a:0 "Join our fascist brothers!"
-portu.37.b:0 "We have no interest in cooperation with the Portuguese"
+portu.37.d:0 "포르투갈국 정부는 우리의 동맹에 가입하는 것과 전쟁을 지원해 줄 것을 요청했습니다. 포르투갈은 몇 달 전에 군사 정부를 전복시키는 국가 신디칼리스트 혁명이 있었습니다. 정부는 사회주의 개혁을 강력히 지지하지만, 포르투갈은 여전히 우리의 파시스트 원칙에 의해 고무되어 있고, 매우 가톨릭적입니다."
+portu.37.a:0 "우리의 파시스트 형제들과 함께 하자!"
+portu.37.b:0 "우리는 포르투갈과의 협력에는 관심이 없다."
 
 portu.38.t:0 "오스트리아가 동맹을 거절하다"
 portu.38.d:0 "오스트리아는 그들의 동맹에 가입하려는 우리의 요청을 거절했습니다."
