--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -78,13 +78,13 @@
  JAP_democratic_party:0 "Rikken Minseito"
  JAP_fascism_party:0 "Taisei Yokusankai"
 
- USA_communism_party:0 "Communist Party USA"
- USA_democratic_party:0 "Democratic Party"
- USA_conservatives_party:0 "Republican Party"
+ USA_communism_party:0 "미국 공산당"
+ USA_democratic_party:0 "민주당"
+ USA_conservatives_party:0 "공화당"
  #USA_republican_party:0 "Republican Party"
- USA_socialist_party:0 "Socialist Party of America"
- USA_fascism_party:0 "Silver Legion of America"
- USA_neutrality_party:0 "America First Party"
+ USA_socialist_party:0 "미국 사회당"
+ USA_fascism_party:0 "미국 은색군단"
+ USA_neutrality_party:0 "미국제일당"
 
  FRA_communism_party:0 "프랑스 공산당"
  FRA_democratic_party:0 "급진당"
@@ -108,19 +108,19 @@
  AUS_socialist_party:0 "SPÖ"
  AUS_socialist_party_long:0 "오스트리아 사회민주당"
 
- CHI_communism_party:0 "Communist Rebels"
+ CHI_communism_party:0 "공산주의 반군"
  CHI_communism_party_long:0 "The Communist Underground\n§g After the Shangai Massacre where thousands of support of the CPC where killed, the communist party was supressed in the entire Republic. Every member of the party or supporter would be hunted down to their death by republican forces. The Main forces of the CPC undertook the long march and flew to the western mouintans of China. The last communist supporters in the republic are hidding and consist only of a handful of people."
  CHI_communism_party_reborn:0 "CPC"
- CHI_communism_party_reborn_long:0 "Communist Party of China"
- CHI_democratic_party:0 "Kuomintang Left Wing"
+ CHI_communism_party_reborn_long:0 "중국 공산당"
+ CHI_democratic_party:0 "국민당 좌파"
  CHI_democratic_party_long:0 "Left Wing of the Kuomintang\n§g While the Kuomintang rules over the republic it itself is not united. The left wing of Kuomintang is fighting for survival and try to keep Sun Yat-sen's ideals alive. However the constant clashes with the current ruling right wing over the strategic politics in China and the often accusations by the military blaming them to work with Communist put them in a unfavorable spot. But currently they are the only party recognizing the threat of the Japanese."
  CHI_fascism_party:0 "NGROC"
  CHI_fascism_party_long:0 "National Government of the Republic of China\n§g"
- CHI_neutrality_party:0 "Kuomintang Military"
+ CHI_neutrality_party:0 "국민당 군부"
  CHI_neutrality_party_long:0 "Military Wing of the Kuomintang\n§g Chiang Kai Shek is one of the most influential members of the Kuomintang. When the North Expedition was ongoing it appeared that Chiang would become the chairman. But after failure of the campaign, Hu Hamnin was elected the new Chairsman. Those two humiliations still did not stop Chiang Kai Shek and he continued being a member of the Kuomintang and commander of the army. It is clear that if Hanmin would lose his position most of the conservative members would vote for him as a new chairman."
  CHI_socialist_party:0 "Zhōngguó Shèhuìdang"
  CHI_socialist_party_long:0 "Zhōngguó Shèhuìdang\n§g"
- CHI_conservatives_party:0 "Kuomintang Right Wing"
+ CHI_conservatives_party:0 "국민당 우파"
  CHI_conservatives_party_long:0 "Right Wing of the Kuomintang\n§g The right wing is comprised of conservatives, reactionaries and nationalists. The right wing is currently lead by Hu Hanmin. Hanmin has done a good job at keeping the right wing in power and keeping the different views of the wing themself together. But it is unclear what will happen with the right wing if he would lose this position. Nationalists and Reactionaries would propably join the Chiang Kai Shek while the rest might allign with more liberal positions to oppose the aggressive stance of Chiang."
 
  XSM_neutrality_party:0 "Ma Clique"
@@ -572,7 +572,7 @@
  PAK_neutrality_party:0 "Muslim League"
 
 ################################
-RUS_conservatives_party:0 "사관생도들"
+RUS_conservatives_party:0 "입헌민주당"
 RUS_neutrality_party:0 "10월 17일 연합"
 RUS_democratic_party:0 "진보당"
 RUS_fascism_party:0 "러시아 의회"
