--- a/localisation/rus_events_l_english.yml
+++ b/localisation/rus_events_l_english.yml
@@ -1,24 +1,24 @@
- l_english:
+﻿ l_english:
  russia.1.t:0 "러시아가 영국-러시아 협력을 제안하다"
  russia.1.d:0 "러시아는 협상국에서 탈퇴할 때까지 영국과 항상 우호적인 관계를 유지해 왔습니다. 그들의 새로운 자유화된 입헌군주제를 도입하면서, 새로운 차르는 현재 한때 대전 후 잃었던 영국-러시아 관계를 회복하고 강화하기 위해 노력하고 있습니다. 그러나 이 규정 중 일부는 영국령 소말릴란드 이양과 아프가니스탄과 페르시아에 대한 독립 보장 철회 등입니다. 이러한 요구는 폴란드 자치체 설립에 의해 보상될 것입니다."
  russia.1.a:0 "진정한 강대국의 위대한 아이디어다!"
- russia.1.b:0 "그들은 우리를 한 번 속였고, 우리는 다시는 속지 않을 것이다! 안 돼!"
+ russia.1.b:0 "그들은 우리를 한 번 속였고, 우리는 다시는 속지 않을 것이다! 거래는 없다!"
  russia.2.t:0 "영국이 수락하다!"
  russia.2.d:0 "영국인들은 우리의 제안을 받아들였고, 이후 영국령 소말릴란드를 양도했으며, 아프가니스탄과 페르시아에 대한 독립 보장을 취소했습니다. 우리는 그 거래를 지지하기 위해 폴란드 자치권을 곧 확립할 필요가 있습니다."
  russia.2.a:0 "차르 만세, 국왕 폐하 만세!"
  russia.3.t:0 "영국이 거절하다!"
  russia.3.d:0 "영국인들은 우리와의 협력이 가치가 없고, 우리가 미래의 잠재적인 적이라고 결정했습니다. 유감스럽지만 현 시점에서 사태를 수습할 수 있는 일은 아무것도 할 수 없습니다."
- russia.3.a:0 "젠장할!"
+ russia.3.a:0 "젠장할 놈들!"
  russia.4.t:0 "제2의 알래스카 매입"
  russia.4.d:0 "러시아인들이 거래를 하려 우리에게 접근했습니다. 알래스카의 재이전을 대가로 우리는 파리 주식 폭락에서 회복하기 위한 경제적 원조를 받을 것입니다. 알래스카는 우리의 가장 큰 영토입니다. 그리고 알래스카의 손실은 미국 국민들을 화나게 할지도 모릅니다. 반면 우리 경제는 어떤 수단을 써서라도 고칠 필요가 있습니다."
- russia.4.a:0 "에이커당 10센트? 그건 나쁜 거래가 아니야!"
+ russia.4.a:0 "에이커당 10센트? 나쁘지 않은 거래다!"
  russia.4.b:0 "우리는 우리 문제를 해결하기 위해 우리 땅을 그냥 넘겨서는 안 된다!"
  russia.5.t:0 "성공적인 알래스카 매입"
  russia.5.d:0 "미국인들은 우리의 제안을 받아들였고, 그들의 군대를 그 지역에서 철수시켰습니다. 알래스카는 다시 한번 러시아 땅입니다!"
  russia.5.a:0 "러시아령 아메리카여, 돌아온 걸 환영한다!"
  russia.6.t:0 "미국이 거절하다"
  russia.6.d:0 "미국은 알래스카가 미국에 남아야 한다고 결정했고, 그렇게 해서 우리의 거래를 거절했습니다."
- russia.6.a:0 "젠장할!"
+ russia.6.a:0 "젠장할 놈들!"
  russia.23.t:0 "제2의 알래스카 매입"
  russia.23.d:0 "1860년대에 러시아는 당시 침체된 우리의 경제를 개선하기 위해 러시아령 아메리카 식민지를 미국에 팔았습니다. 그 이후 러시아 경제는 비약적으로 성장했습니다. 이론적으로, 러시아인들은 미국인들에게서 이 계층적이고 자원이 풍부한 땅을 다시 살 수 있을 것입니다."
  russia.23.a:0 "흥미롭군."
@@ -79,7 +79,7 @@
  russia.24.a:0 "조의를 표한다."
  russia.24.b:0 "그가 그리울 것이다."
  
- russia.26.t:0 "수상 선거"
+  russia.26.t:0 "수상 선거"
  russia.26.d:0 "우리의 후계자 없는 차르가 죽었으니 이제 우리는 군주제에서 벗어나야 할 때입니다. 강력한 지도자가 필요합니다! 약한 국가 두마는 이 상황을 처리할 자격이 없는 것이나 마찬가지입니다. 이제 우리는 강하고 안정적인 사람에게 힘을 실어줄 때입니다. 모든 러시아인의 첫번째 수상은..."
  russia.26.a:0 "알렉산드르 콜차크 - 위엄있는 러시아인 장군!"
  russia.26.b:0 "라브르 코르닐로프 - 갈리치아의 영웅!"
@@ -283,7 +283,6 @@
  russia.89.t:0 "루마니아 철위대!"
  russia.89.d:0 "루마니아는 독립 이후 우리의 영향력 아래 있었습니다. 우리는 그들의 독립 전쟁과 대전 동안 도움과 지원을 제공해 왔습니다.\n하지만 이제 그들은 자유와 자유를 위해 우리의 영향력을 떠나길 원하는 것처럼 보입니다. 지금으로서는 어쩔 수 없지만 발칸반도를 주시할 것입니다..."
  russia.89.a:0 "그리 오래 가지 않을 것이다..."
- russia.89.b:0 "그리 오래 가지 않을 것이다..."
  
  russia.90.t:0 "철위대"
  russia.90.d:0 "루마니아는 협상국 편에 서서 대전에 참가했습니다. 그들은 약속된 땅이 있었지만, 받은 영토는 원래 약속된 것보다 훨씬 작았고, 게다가 그들은 러시아의 세력권에 가입할 의무가 있었습니다.\n니콜라이 2세의 사망에 따른 러시아 내 혼란으로 루마니아인들은 마침내 철위대 덕분에 독립할 수 있게 되었습니다. 페트로그라드가 어떤 반응을 보일지는 확실치 않지만 러시아가 루마니아에 대한 영향력을 회복하기 위해 어떠한 조치라도 취할 것이 확실합니다."
@@ -319,7 +318,7 @@
 
  russia.97.t:0 "보수파 개혁"
  russia.97.d:0 "이전에 우리는 군소 현대화를 시작했습니다. 시간이 지나자, 우리는 우리 부대와 장군 몇 명을 다시 훈련시켜 보수파와 타협하도록 했습니다."
- russia.97.a:0 "좋은 소식이야."
+ russia.97.a:0 "좋은 소식이다."
 
  #Annexation events
  
@@ -368,7 +367,7 @@
  russia_homeland.1.d:0 "니콜라이 2세의 죽음 이후, 우리는 러시아의 미래를 결정할 때입니다. 우리의 정책을 선택함으로써, 우리는 앞으로 몇 년 동안 러시아의 운명을 결정할 것입니다.\n\n아주 오랫동안 러시아 사람들은 조국의 민주화를 꿈꿨습니다. 입헌 군주제를 완전히 채택함으로써 차르의 권력은 제한되고 새로운 수상과 두마 쪽으로 옮겨갈 것입니다. 이것은 독재적인 러시아의 종말을 의미할 것입니다. 보다 급진적인 조언자들은 심지어 정권의 완전한 해방을 제안하기도 합니다.\n\n그럼에도 불구하고, 우리는 또한 모든 러시아인들의 황제를 제위에 올려놓고 우리의 차기 황제 니콜라이 2세의 차르정 러시아 정책을 추진할 수 있었습니다.\n\n보다 공화주의적인 러시아를 선호하는 알렉산더 케렌스키의 사회주의 연합, 알렉산더 고노발로프 휘하의 자유주의 연합, 블라디미르 나보코프가 대표로 있는 보수주의 연합, 그리고 마침내 전쟁 영웅 안톤 데니킨이 이끄는 차르의 연합.\n\n어느 쪽이 될 것입니까?"
  russia_homeland.1.a:0 "케렌스키 휘하의 사회주의 공화국"
  russia_homeland.1.b:0 "막라코프 휘하의 진보당"
- russia_homeland.1.c:0 "나보코프 휘하의 생도들"
+ russia_homeland.1.c:0 "나보코프 휘하의 입헌민주당"
  russia_homeland.1.e:0 "데니킨 휘하의 옥타브리스트"
  
  russia_homeland.2.t:0 "불만족스러워 하는 대중"
@@ -383,7 +382,7 @@
  
  russia_homeland.4.t:0 "부하라 합병"
  russia_homeland.4.d:0 "러시아 정부는 러시아 영토 내에서 우리의 자치권에 관한 성명을 발표했습니다.\n\n그들은 우리 부하라 주가 러시아 땅에 편입되기를 바랍니다. 이것은 부하라 토후국의 종말을 의미합니다...\n\n수락해야 합니까?"
- russia_homeland.4.a:0 "[최종장]을 받아들인다."
+ russia_homeland.4.a:0 "받아들인다. [Endgame]"
  russia_homeland.4.b:0 "독립을 위해 싸워라!"
  
  russia_homeland.5.t:0 "부하라 합병"
@@ -398,7 +397,7 @@
  russia_homeland.8.d:0 "차르 니콜라이의 죽음에 이어 러시아 정부는 사임합니다. 그러나 새로운 차르 체제 하에서 새로운 정부가 수립될 것입니다.\n\n이 날짜에 러시아의 정당들은 매우 경쟁적이어서 잠재적인 이해 충돌로 이어질 수 있습니다."
  russia_homeland.8.a:0 "음..."
 
- russia_homeland.9.t:0 "황실의 신앙"
+ russia_homeland.9.t:0 "황가의 믿음"
  russia_homeland.9.d:0 "공화정 정권이 들어서자 차르는 퇴위할 수밖에 없습니다. 러시아는 이제 민주공화국이 되었습니다.\n\n지금 우리가 처리해야 할 한 가지는 황실입니다. 러시아 사람들의 상당수는 아직도 차르를 사랑하고 그가 사라지는 것을 볼 수 없습니다. 이것은 우리를 로마노프들을 강제로 망명시키거나 그들이 러시아에 머물게 하고 그들의 왕실 지위를 보존하도록 허락할 수 있는 입장에 놓이게 합니다다."
  russia_homeland.9.a:0 "망명시켜라."
  russia_homeland.9.b:0 "남겨두어라."
@@ -410,3 +409,8 @@
  russia_homeland.11.t:0 "장군들이 차르 편을 들다!"
  russia_homeland.11.d:0 "우리는 최고위급 장군들이 우리 붉은 군대를 이탈했다는 보고를 받았습니다. 점점 더 많은 사람들이 친차르 운동을 편들기로 결심합니다. 이것은 우리 군대의 위신에 큰 타격을 줍니다..."
  russia_homeland.11.a:0 "반역자들!"
+ 
+ russia_homeland.12.t:0 "레닌이 러시아로 가는 열차를 타다!"
+ russia_homeland.12.d:0 "러시아에서 공산당이 정권을 잡은 데 이어, 블라디미르 레닌이라는 유명한 좌파 러시아 철학자가 스위스로 망명했다가 페트로그라드로 돌아오고 있습니다.\n\n블라디미르 레닌(울리야노프)은 카를 마르크스에서 영감을 받은 정치에 대한 자신의 견해를 광고하여 제1차 세계 대전 이전 차르 러시에서아 악명 높은 명성을 얻었습니다. 그 이후로 그는 유럽에서 망명생활을 할 수 밖에 없었습니다.\n\n이제 망명이 끝났으니 러시아 정치계에서 고위 인사로 오를 것으로 예상됩니다..." 
+ russia_homeland.12.a:0 "그에 대해서 들어본 적이 없다..."
+ russia_homeland.12.b:0 "레닌 동지 만세!"
