--- a/localisation/rus_focus_l_english.yml
+++ b/localisation/rus_focus_l_english.yml
@@ -316,6 +316,6 @@
  RUS_war_SIK:0 "야르칸드 개입"
  RUS_war_SIK_desc:0 "중국이 혼란에 빠져 있는 동안, 우리는 우리의 세력권 하에 중국의 극서부의 야르칸드 지역을 장악할 수 있습니다."
  RUS_world_revolution:0 "러시아 혁명!"
- RUS_world_revolution_desc:0 "러시아에서 위대한 노동자 혁명이 성공했습니다! 우리는 여기서 멈추지 않을 것입니다. 모든 노동자들은 붉은 별 아래서 해방되고 다시 뭉쳐야 합니다1 프롤레타리아 만세."
+ RUS_world_revolution_desc:0 "러시아에서 위대한 노동자 혁명이 성공했습니다! 우리는 여기서 멈추지 않을 것입니다. 모든 노동자들은 붉은 별 아래서 해방되고 다시 뭉쳐야 합니다! 프롤레타리아 만세."
  RUS_annex_BUK:0 "부하라 합병"
  RUS_annex_BUK_desc:0 "부하라 토후국은 중앙아시아의 러시아 위성국이었습니다. 그것은 아프가니스탄과 영국령 인도에 대한 우리의 완충제입니다. 이제 우리가 더 강해진 이상 영국인들에게 도전할 수 있습니다. 부하라를 러시아에 합병하고 통합함으로써, 우리는 아프가니스탄과 이란으로 가는 더 쉬운 통로를 얻을 수 있을 것입니다."
