--- a/localisation/wtt_decisions_l_english.yml
+++ b/localisation/wtt_decisions_l_english.yml
@@ -908,8 +908,8 @@
  GER_louise_for_belgium:0 "프로이센의 루이제를 벨기에 연락관으로 임명"
  GER_sea_walls_category:0 "해안 요새 확장"
  GER_sued_wallkuere:0 "프랑스 지중해 해안 요새화"
- GER_expand_nord:0 "노드발퀴레 개선"
- GER_expand_the_nord_wall:0 "노드발퀴레를 네덜란드와 덴마크로 확장"
+ GER_expand_nord:0 "노르드발퀴레 개선"
+ GER_expand_the_nord_wall:0 "노르드발퀴레를 네덜란드와 덴마크로 확장"
  GER_expand_german_coastal:0 "독일 해안 요새 개선"
  BAV_french_flanders:0 "프랑스령 플랑드르 합병"
  BEL_state_integration:0 "주 합병"
