--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -592,14 +592,22 @@
  AFG_fascism_DEF:0 "신 아프간 칸국"
  AFG_democratic:0 "아프가니스탄 공화국"
  AFG_democratic_DEF:0 "아프가니스탄 공화국"
+ AFG_socialist:0 "아프가니스탄 공화국"
+ AFG_socialist_DEF:0 "아프가니스탄 공화국"
  AFG_neutrality:0 "아프가니스탄"
  AFG_neutrality_DEF:0 "아프가니스탄"
+ AFG_conservatives:0 "아프가니스탄"
+ AFG_conservatives_DEF:0 "아프가니스탄"
  AFG_communism:0 "아프가니스탄 민주공화국"
  AFG_communism_DEF:0 "아프가니스탄 민주공화국"
  AFG_fascism_ADJ:0 "아프간"
  AFG_democratic_ADJ:0 "아프간"
  AFG_neutrality_ADJ:0 "아프간"
  AFG_communism_ADJ:0 "아프간"
+ AFG_socialist_ADJ:0 "아프간"
+ AFG_conservatives_ADJ:0 "아프간"
+
+
  ARG_fascism:0 "아르헨티나 리그"
  ARG_fascism_DEF:0 "아르헨티나 연맹"
  ARG_democratic:0 "아르헨티나 공화국"
@@ -697,7 +705,7 @@
  CHC_socialist_ADJ:0 "중국"
  CHC_conservatives_ADJ:0 "중국"
 
-  PRC_fascism:0 "중화제국"
+ PRC_fascism:0 "중화제국"
  PRC_fascism_DEF:0 "중화제국"
  PRC_democratic:0 "중화민국"
  PRC_democratic_DEF:0 "중화민국"
