--- a/localisation/strategic_region_names_l_english.yml
+++ b/localisation/strategic_region_names_l_english.yml
@@ -34,7 +34,7 @@
  STRATEGICREGION_34:0 "중앙아메리카"
  STRATEGICREGION_35:0 "남아메리카"
  STRATEGICREGION_36:0 "그린란드"
- STRATEGICREGION_37:0 "Pribaltika"
+ STRATEGICREGION_37:0 "발트 연안"
  STRATEGICREGION_38:0 "폴란드"
  STRATEGICREGION_39:0 "서부 러시아"
  STRATEGICREGION_40:1 "트란스볼가"
@@ -44,6 +44,7 @@
  STRATEGICREGION_44:0 "덴마크 해협"
  STRATEGICREGION_45:0 "노르웨이 해"
  STRATEGICREGION_46:0 "바렌츠 해"
+ STRATEGICREGION_47:1 "이베리아 연안"
  STRATEGICREGION_47:1 "이베리아 연안"
  STRATEGICREGION_48:0 "아프리카 연안"
  STRATEGICREGION_49:0 "북대서양 해령"
@@ -120,7 +121,7 @@
  STRATEGICREGION_120:0 "중부 미국"
  STRATEGICREGION_121:0 "동부 캐나다"
  STRATEGICREGION_122:0 "서부 캐나다"
- STRATEGICREGION_123:1 "트란스볼캐닉 해협"
+ STRATEGICREGION_123:0 "멕시코"
  STRATEGICREGION_124:0 "북부 남아메리카"
  STRATEGICREGION_125:0 "브라질"
  STRATEGICREGION_126:0 "북아프리카"
@@ -191,8 +192,6 @@
  STRATEGICREGION_191:0 "북노르웨이"
  STRATEGICREGION_192:0 "북스웨덴"
  STRATEGICREGION_193:2 "북호주"
- STRATEGICREGION_194:0 "동호주"
- STRATEGICREGION_195:0 "중부 호주"
  STRATEGICREGION_194:0 "동호주"
  STRATEGICREGION_195:0 "중부 호주"
  STRATEGICREGION_196:1 "아라비아"
