--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -57,31 +57,31 @@
  centrism:1 "중도주의"
  centrism_desc:1 "중도주의는 현재와 미래에 필요한 것들을 상식적인 것으로 적절히 연설을 통해 해결하기를 원하는 정부의 한 형태로, 대중의 믿음과 위험을 고려하는 중도선을 이러한 요구의 맥락에서 수용하는 것을 지지합니다."
 
- POL_fascism_party:0 "ONR-Falanga"
- POL_fascism_party_long:0 "Oboz Narodowo Radykalny-Falanga"
- POL_communism_party:0 "Polish Socialist Party"
+ POL_fascism_party:0 "ONR-팔랑가"
+ POL_fascism_party_long:0 "국민급진기지 팔랑가"
+ POL_communism_party:0 "폴란드 사회당"
  POL_democratic_party:0 "PSL"
- POL_democratic_party_long:0 "Polskie Stronnictwo Ludowe"
+ POL_democratic_party_long:0 "폴란드 인민당"
  POL_neutrality_party:0 "BBWR"
  ENG_communism_party:0 "CPGB"
- ENG_democratic_party:0 "Liberal Party"
- ENG_fascism_party:0 "British Union of Fascists"
- ENG_conservatives_party:0 "Conservative Party"
- ENG_neutrality_party:0 "Windsor Loyalists"
- ENG_socialist_party:0 "Labour Party"
- ITA_communism_party:0 "Partito Comunista Italiano"
- ITA_democratic_party:0 "Partito Popolare Italiano"
- ITA_conservatives_party:0 "Blocchi Nazionali"
- ITA_fascism_party:0 "Partito Nazionale Fascista"
- ITA_neutrality_party:0 "Partito Nazionale Monarchico"
- JAP_communism_party:0 "Nihon Kyosan-to"
- JAP_democratic_party:0 "Rikken Minseito"
- JAP_fascism_party:0 "Taisei Yokusankai"
+ ENG_democratic_party:0 "자유당"
+ ENG_fascism_party:0 "영국 파시스트 연합"
+ ENG_conservatives_party:0 "보수당"
+ ENG_neutrality_party:0 "윈저 충성파"
+ ENG_socialist_party:0 "노동당"
+ ITA_communism_party:0 "이탈리아 공산당"
+ ITA_democratic_party:0 "이탈리아 인민당"
+ ITA_conservatives_party:0 "국가 연합"
+ ITA_fascism_party:0 "국가 파시스트당"
+ ITA_neutrality_party:0 "군주주의 국민당"
+ JAP_communism_party:0 "일본 공산당"
+ JAP_democratic_party:0 "입헌민생당"
+ JAP_fascism_party:0 "대정익찬회"
 
  USA_communism_party:0 "미국 공산당"
  USA_democratic_party:0 "민주당"
  USA_conservatives_party:0 "공화당"
- #USA_republican_party:0 "Republican Party"
+ #USA_republican_party:0 "공화당"
  USA_socialist_party:0 "미국 사회당"
  USA_fascism_party:0 "미국 은색군단"
  USA_neutrality_party:0 "미국제일당"
@@ -123,31 +123,31 @@
  CHI_conservatives_party:0 "국민당 우파"
  CHI_conservatives_party_long:0 "Right Wing of the Kuomintang\n§g The right wing is comprised of conservatives, reactionaries and nationalists. The right wing is currently lead by Hu Hanmin. Hanmin has done a good job at keeping the right wing in power and keeping the different views of the wing themself together. But it is unclear what will happen with the right wing if he would lose this position. Nationalists and Reactionaries would propably join the Chiang Kai Shek while the rest might allign with more liberal positions to oppose the aggressive stance of Chiang."
 
- XSM_neutrality_party:0 "Ma Clique"
+ XSM_neutrality_party:0 "마가군벌"
 
- SPR_fascism_party_long:0 "Partido Nacionalista Español"
+ SPR_fascism_party_long:0 "스페인 국민당"
  SPR_fascism_party:0 "PNE"
  SPR_democratic_party:0 "IR"
- SPR_democratic_party_long:0 "Izquierda Republicana"
- SPR_conservatives_party_long:0 "Confederación Española de Derechas Autónomas "
+ SPR_democratic_party_long:0 "공화좌파"
+ SPR_conservatives_party_long:0 "스페인 자치 우익 연합"
  SPR_conservatives_party:0 "CEDA"
- SPR_socialist_party_long:0 "Partido Socialista Obrero Español "
- SPR_socialist_party:0 "PSOE "
+ SPR_socialist_party_long:0 "스페인 사회노동자당"
+ SPR_socialist_party:0 "PSOE"
  SPR_communism_party:0 "PCE"
- SPR_communism_party_long:0 "Partido Comunista de España"
+ SPR_communism_party_long:0 "스페인 공산당"
  SPR_neutrality_party:0 "RE"
- SPR_neutrality_party_long:0 "Renovación Española"
- POR_neutrality_party:0 "Estado Novo"
+ SPR_neutrality_party_long:0 "스페인 개혁당"
+ POR_neutrality_party:0 "에스타도 노보"
  POR_communism_party:0 "PCP"
- POR_communism_party_long:0 "Partido Comunista Português"
+ POR_communism_party_long:0 "포르투갈 공산당"
  POR_democratic_party:0 "PD"
- POR_democratic_party_long:0 "Partido Democrático"
+ POR_democratic_party_long:0 "민주당"
  POR_fascism_party:0 "MNS"
- POR_fascism_party_long:0 "Movimento Nacional-Sindicalista"
+ POR_fascism_party_long:0 "국가신디칼리스트 운동"
  POR_conservatives_party:0 "PCP"
- POR_conservatives_party_long:0 "Partido Conservador de Portugal"
+ POR_conservatives_party_long:0 "포르투갈 보수당"
  POR_socialist_party:0 "PRED"
- POR_socialist_party_long:0 "Partido Republicano da Esquerda Democráticas"
+ POR_socialist_party_long:0 "민주주의 좌파 공화당"
  GRE_neutrality_party:0 "Metaxá"
  GRE_neutrality_party_long:0 "Kathestós Metaxá"
  GRE_communism_party:0 "KKE"
@@ -165,8 +165,8 @@
  EST_neutrality_party:0 "Isamaaliit"
  EST_ndemocratic_party:0 "RKE"
  EST_democratic_party_long:0 "Rahvuslik Keskerakond"
- IRQ_neutrality_party:0 "Monarchists"
- IRQ_fascism_party:0 "Golden Square"
+ IRQ_neutrality_party:0 "군주주의자"
+ IRQ_fascism_party:0 "황금 광장"
  IRQ_communism_party:0 "Al-Hizb al-Shiu'iy"
 
  SWE_communism_party:0 "SKP"
@@ -182,42 +182,42 @@
  SWE_fascism_party:0 "SNF"
  SWE_fascism_party_long:0 "Sveriges Nationella Förbund"
  
- FIN_neutrality_party:0 "Kesk"
- FIN_neutrality_party_long:0 "Suomen Keskusta"
+ FIN_neutrality_party:0 "중앙당"
+ FIN_neutrality_party_long:0 "핀란드 중앙당"
  FIN_democratic_party:0 "SDP"
- FIN_democratic_party_long:0 "Suomen Sosialidemokraattinen Puolue"
+ FIN_democratic_party_long:0 "핀란드 사회민주당"
  FIN_fascism_party:0 "IKL"
- FIN_fascism_party_long:0 "Isänmaallinen Kansanliike"
+ FIN_fascism_party_long:0 "애국인민운동"
  FIN_communism_party:0 "SKP"
- FIN_communism_party_long:0 "Suomen Kommunistinen Puolue"
- DEN_socialist_party:0 "Socialdemokratiet"
- DEN_socialist_party_long:0 "Socialdemokratiet"
+ FIN_communism_party_long:0 "핀란드 공산당"
+ DEN_socialist_party:0 "사회민주당"
+ DEN_socialist_party_long:0 "사회민주당"
  DEN_fascism_party:0 "DNSAP"
- DEN_fascism_party_long:0 "Danmarks Nationalsocialistiske Arbejderparti"
+ DEN_fascism_party_long:0 "국가사회주의 덴마크 노동자당"
  DEN_communism_party:0 "DKP"
- DEN_communism_party_long:0 "Danmarks Kommunistiske Parti"
- DEN_neutrality_party:0 "Glücksborg"
- DEN_neutrality_party_long:0 "House of Glücksborg"
- DEN_democratic_party:0 "Venstre"
- DEN_democratic_party_long:0 "Venstre"
- DEN_conservatives_party:0 "Konservative"
- DEN_conservatives_party_long:0 "Det Konservative Folkeparti"
- CAN_democratic_party:0 "Liberal Party"
- CAN_democratic_party_long:0 "Liberal Party of Canada"
- CAN_fascism_party:0 "National Unity Party"
- CAN_fascism_party_long:0 "National Unity Party"
+ DEN_communism_party_long:0 "덴마크 공산당"
+ DEN_neutrality_party:0 "글뤽스부르크"
+ DEN_neutrality_party_long:0 "글뤽스부르크 왕가"
+ DEN_democratic_party:0 "벤스터"
+ DEN_democratic_party_long:0 "벤스터"
+ DEN_conservatives_party:0 "보수당"
+ DEN_conservatives_party_long:0 "보수인민당"
+ CAN_democratic_party:0 "자유당"
+ CAN_democratic_party_long:0 "캐나다 자유당"
+ CAN_fascism_party:0 "국민단결당"
+ CAN_fascism_party_long:0 "국민단결당"
  CAN_communism_party:0 "CPC"
- CAN_communism_party_long:0 "Communist Party of Canada"
+ CAN_communism_party_long:0 "캐나다 공산당"
  CAN_neutrality_party:0 "CCF"
- CAN_neutrality_party_long:0 "Co-operative Commonwealth Federation"
+ CAN_neutrality_party_long:0 "협동조합당"
  AST_neutrality_party:0 "ACP"
- AST_neutrality_party_long:0 "Australian Country Party"
- AST_democratic_party:0 "Labor"
- AST_democratic_party_long:0 "Australian Labor Party"
- AST_fascism_party:0 "Centre Party"
- AST_fascism_party_long:0 "Centre Party"
+ AST_neutrality_party_long:0 "오스트레일리아 국가당"
+ AST_democratic_party:0 "노동당"
+ AST_democratic_party_long:0 "오스트레일리아 노동당"
+ AST_fascism_party:0 "중앙당"
+ AST_fascism_party_long:0 "중앙당"
  AST_communism_party:0 "CPA"
- AST_communism_party_long:0 "Communist Party of Australia"
+ AST_communism_party_long:0 "오스트레일리아 공산당"
  MEX_democratic_party:0 "PAN"
  MEX_democratic_party_long:0 "Partido Acción Nacional"
  MEX_fascism_party:0 "UNS"
@@ -240,8 +240,8 @@
  BRA_communism_party_long:1 "Partido Comunista Brasileiro"
  BRA_democratic_party:1 "UDB"
  BRA_democratic_party_long:1 "União Democrática Brasileira"
- BRA_neutrality_party:0 "Estado Novo"
- BRA_neutrality_party_long:0 "Estado Novo"
+ BRA_neutrality_party:0 "에스타도 노보"
+ BRA_neutrality_party_long:0 "에스타도 노보"
 
  TUR_fascism_party:0 "국가당"
  TUR_fascism_party_long:0 "국가당"
@@ -279,86 +279,86 @@
  ROM_conservatives_party_long:0 "Partidul Conservator"
 
  YUG_communism_party:0 "KPJ"
- YUG_communism_party_long:0 "Komunisticna partija Jugoslavije"
- YUG_democratic_party:0 "Demokratska stranka"
- YUG_democratic_party_long:0 "Jugoslovanska demokratska stranka"
- YUG_neutrality_party:0 "Regency Council"
+ YUG_communism_party_long:0 "유고슬라비아 공산당"
+ YUG_democratic_party:0 "민주당"
+ YUG_democratic_party_long:0 "유고슬라비아 민주당"
+ YUG_neutrality_party:0 "섭정위원회"
  YUG_fascism_party:0 "JRZ"
- YUG_fascism_party_long:0 "Jugoslovanska radikalna skupnost"
- SER_communism_party:0 "League of Communists"
- SER_communism_party_long:0 "League of Communists"
- SER_democratic_party:0 "Mihailovic Chetniks"
- SER_democratic_party_long:0 "Mihailovic Chetniks"
- SER_fascism_party:1 "National Salvation"
- SER_fascism_party_long:1 "Government of National Salvation"
- SER_neutrality_party:0 "Royalists"
- SER_neutrality_party_long:0 "Royalists"
- BUL_neutrality_party:0 "Tsar Boris loyalists"
+ YUG_fascism_party_long:0 "유고슬라비아 급진연합"
+ SER_communism_party:0 "공산주의자 동맹"
+ SER_communism_party_long:0 "공산주의자 동맹"
+ SER_democratic_party:0 "미하일로비치파 체트니크"
+ SER_democratic_party_long:0 "미하일로비치파 체트니크"
+ SER_fascism_party:1 "구국정부"
+ SER_fascism_party_long:1 "세르비아 구국정부"
+ SER_neutrality_party:0 "왕당파"
+ SER_neutrality_party_long:0 "왕당파"
+ BUL_neutrality_party:0 "차르 보리스 충성파"
  BUL_communism_party:0 "BCP"
- BUL_communism_party_long:0 "Bulgarian Communist Party"
+ BUL_communism_party_long:0 "불가리아 공산당"
  BUL_democratic_party:0 "UPPP"
- BUL_democratic_party_long:0 "United People's Progressive Party"
+ BUL_democratic_party_long:0 "통합인민진보당"
  BUL_fascism_party:0 "UBNL"
- BUL_fascism_party_long:0 "The Union of Bulgarian National Legions"
+ BUL_fascism_party_long:0 "불가리아 국민군단연합"
  SAF_neutrality_party:0 "ANC"
- SAF_neutrality_party_long:0 "African National Congress"
+ SAF_neutrality_party_long:0 "아프리카 국민회의"
  SAF_communism_party:0 "SACP"
- SAF_communism_party_long:0 "South African Communist Party"
+ SAF_communism_party_long:0 "남아프리카 공산당"
  SAF_democratic_party:0 "United"
- SAF_democratic_party_long:0 "United National South African Party"
+ SAF_democratic_party_long:0 "남아프리카 통합국가당"
  SAF_fascism_party:0 "GNP"
- SAF_fascism_party_long:0 "Gesuiwerde Nasionale Party"
- NZL_neutrality_party:0 "National"
- NZL_neutrality_party_long:0 "New Zealand National Party"
- NZL_democratic_party:0 "Labour"
- NZL_democratic_party_long:0 "New Zealand Labour Party"
- NZL_fascism_party:0 "Legion"
- NZL_fascism_party_long:0 "New Zealand Legion"
+ SAF_fascism_party_long:0 "순수국민당"
+ NZL_neutrality_party:0 "국가당"
+ NZL_neutrality_party_long:0 "뉴질랜드 국가당"
+ NZL_democratic_party:0 "노동당"
+ NZL_democratic_party_long:0 "뉴질랜드 노동당"
+ NZL_fascism_party:0 "군단"
+ NZL_fascism_party_long:0 "뉴질랜드 군단"
  NZL_communism_party:0 "CPNZ"
- NZL_communism_party_long:0 "Communist Party of New Zealand"
- NOR_neutrality_party:0 "Venstre"
- NOR_neutrality_party_long:0 "Venstre"
+ NZL_communism_party_long:0 "뉴질랜드 공산당"
+ NOR_neutrality_party:0 "벤스터"
+ NOR_neutrality_party_long:0 "벤스터"
  NOR_communism_party:0 "NKP"
- NOR_communism_party_long:0 "Norges Kommunistiske Parti"
+ NOR_communism_party_long:0 "노르웨이 공산당"
  NOR_democratic_party:0 "AP"
- NOR_democratic_party_long:0 "Arbeiderpartiet"
+ NOR_democratic_party_long:0 "노동당"
  NOR_fascism_party:0 "NS"
- NOR_fascism_party_long:0 "Nasjonal Samling"
+ NOR_fascism_party_long:0 "국민연합"
  HOL_neutrality_party:0 "ARP"
- HOL_neutrality_party_long:0 "Anti-Revolutionaire Partij"
+ HOL_neutrality_party_long:0 "반혁명당"
  HOL_communism_party:0 "CPN"
- HOL_communism_party_long:0 "Communistische Partij Nederland"
+ HOL_communism_party_long:0 "네덜란드 공산당"
  HOL_democratic_party:0 "CHU"
- HOL_democratic_party_long:0 "Christelijk-Historische Unie"
+ HOL_democratic_party_long:0 "기독교역사연합"
  HOL_fascism_party:0 "NSB"
- HOL_fascism_party_long:0 "Nationaal-Socialistische Beweging in Nederland"
+ HOL_fascism_party_long:0 "네덜란드 국가사회주의 운동"
  
  BEL_communism_party:0 "KPB"
- BEL_communism_party_long:0 "Parti Communiste de Belgique"
- BEL_socialist_party:0 "Parti Ouvrier Belge"
- BEL_democratic_party:0 "Parti Libéral"
- BEL_conservatives_party:0 "Parti Catholique"
- BEL_conservatives_party_long:0 "Parti Catholique"
- BEL_neutrality_party:0 "Monarchistes"
+ BEL_communism_party_long:0 "벨기에 공산당"
+ BEL_socialist_party:0 "벨기에 노동당"
+ BEL_democratic_party:0 "자유당"
+ BEL_conservatives_party:0 "카톨릭당"
+ BEL_conservatives_party_long:0 "카톨릭당"
+ BEL_neutrality_party:0 "군주주의자"
  BEL_fascism_party:0 "VLB"
- BEL_fascism_party_long:0 "Vlaams Nationaal Block"
+ BEL_fascism_party_long:0 "플람스 국가 연합"
 
  SWI_communism_party:0 "KPS"
- SWI_communism_party_long:0 "Kommunistische Partei der Schweiz"
- SWI_democratic_party:0 "Federal Council"
- SWI_democratic_party_long:0 "Federal Council"
+ SWI_communism_party_long:0 "스위스 공산당"
+ SWI_democratic_party:0 "연방 의회"
+ SWI_democratic_party_long:0 "연방 의회"
  SWI_neutrality_party:0 "FDP"
- SWI_neutrality_party_long:0 "Freisinnig-Demokratische Partei"
+ SWI_neutrality_party_long:0 "자유민주당"
  SWI_fascism_party:0 "FB"
- SWI_fascism_party_long:0 "Fronten Bewegung"
+ SWI_fascism_party_long:0 "국민전선"
  RAJ_neutrality_party:0 "INC"
- RAJ_neutrality_party_long:0 "Indian National Congress"
+ RAJ_neutrality_party_long:0 "인도 국민회의"
  RAJ_communism_party:0 "CPI"
- RAJ_communism_party_long:0 "Communist Party of India"
+ RAJ_communism_party_long:0 "인도 공산당"
  RAJ_democratic_party:0 "IIM"
- RAJ_democratic_party_long:0 "Indian Independence Movement"
+ RAJ_democratic_party_long:0 "인도 독립운동"
  RAJ_fascism_party:0 "AIHA"
- RAJ_fascism_party_long:0 "All-India Hindu Assembly"
+ RAJ_fascism_party_long:0 "전인도힌두의회"
  PER_communism_party:0 "Tudeh Party"
  PER_communism_party_long:0 "Tudeh Party"
  PER_neutrality_party:0 "Pahlavi Dynasty"
