--- a/localisation/replace/INOT_replace_l_english.yml
+++ b/localisation/replace/INOT_replace_l_english.yml
@@ -46,7 +46,7 @@
  STATE_839:0 "북카토비체"
  STATE_840:0 "에디르네"
 
-## events_I_english
+## events_l_english
  news.155.t:0 "독일의 전쟁 재개"
  news.155.d:0 "많은 사람들이 유럽의 평화를 바라고 있었지만, 최근 일련의 사건을 통해 독일은 다시 전쟁의 길을 걷기 시작했습니다."
  news.155.a:0 "이것은 또 다른 대전쟁의 시작이 될 것이다"
